2006-08-28  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/GLWidget.cpp: Using perspective on 3d views.  There is also
	now code for picking included.  When you click but don't drag it
	returns the selected item.  The naming system needs work.

2006-08-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/GLWidget.cpp: Make sure to enable vertex arrays (for
	Benoit's sphere/cylinder classes.

	* src/engines/vertextarray.cpp, src/engines/vertexarray.h: Moved
	Benoit's vertex array sphere and cylinder from Kalzium.

	* src/engines/WireframeEngine.*: New class for a wireframe
	view.

	* src/engines/SphereEngine.*: New class for van der Waals spheres
	using Benoit's classes. Very fast.

	* src/engines/BSEngine.*, src/engines/StickEngine.*: Switch to
	Benoit's vertex array classes.

	* src/MainWindow.h, src/MainWindow.cpp: Add full screen rendering
	and background color. (Needed for upcoming ACS presentations.)

2006-08-24  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/MainWindow.cpp: Make sure to update recent file list when
	creating a new window, and make sure to call updateGL after
	reading a file. Fixes minor bugs. 

2006-08-22  Donald E. Curtis  <dcurti3@sourceforge.net>

	* src/*: Refactored Renderer -> GLEngine for easier typing.

	* src/engines/*: Engines must implement the render function but must be
	implemented for each sub-class of Primitive they wish to be able to
	render. (ie. void render(Atom *a), render(Bond *b)).

2006-08-20  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/GLWidget.cpp: Handle mouse events based on QMouseEvent,
	rather than internal members. Fixes occasional "sticking."

	* src/MainWindow.h, src/MainWindow.cpp: Fix saveFile -- make sure to call
	SetOutFormat() not SetInFormat()! Works great now. Added code to
	save settings for window position and size.

	* src/main.cpp: Update with fix from Carsten Niehaus to use
	cleaner "foreach" mechanism.

2006-08-19  Geoffrey Hutchison  <babel@geoffhutchison.net>
